# Trading-Platform

./: CMakeLists.txt  README.md
data/: market_data.csv
include/: Events.h  MarketDataFeed.h  MeanReversionStrategy.h  OrderBook.h  Portfolio.h  Reporting.h  Strategy.h  TimeSeries.h  TrendFollowingStrategy.h  Types.h
src/: MarketDataFeed.cpp  MeanReversionStrategy.cpp  OrderBook.cpp  Portfolio.cpp  Reporting.cpp  TrendFollowingStrategy.cpp  main.cpp
tests/: CMakeLists.txt  test_market_feed.cpp  test_order_book.cpp  test_portfolio.cpp
